@@ -1,4 +1,4 @@
 EXTRA_DIST = acbuiltinapply.m4 acexesuffix.m4 acffi.m4 acfind.m4 acguilibs.m4 \
 	acinline.m4 acinstall.m4 aclinkflags.m4 acnextstep.m4 \
 	acobjclibs.m4 acobjcmalloc.m4 acpng.m4 acpointerfmt.m4 \
-	acreplacefuncs.m4 acswarm.m4 actcltk.m4
+	acreplacefuncs.m4 acrpath.m4 acswarm.m4 actcltk.m4
